# raytracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  run_tests.bat  run_tests.sh
dependencies/imgui/: CMakeLists.txt
dependencies/stb_image/: CMakeLists.txt
dependencies/stb_image/include/: stb_image_write.h
src/: Application.cpp  Application.h  Entry.cpp  Main.cpp  PCH.h  UI.cpp  Window.cpp  Window.h
src/App/: Application.cpp  Application.h
src/Math/: BBox.cpp  BBox.h  BVH.cpp  BVH.h  Camera.cpp  Camera.h  Constant.cpp  Constant.h  Intersection.cpp  Intersection.h  Material.cpp  Material.h  Math.cpp  Math.h  Object.cpp  Object.h  Ray.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Texture.cpp  Texture.h
src/Render/: CPU.cpp  CPU.h  Image.cpp  Image.h  RenderDevice.cpp  RenderDevice.h  Texture2D.cpp  Texture2D.h
src/Render/Kernel/: Kernel.cpp  Kernel.h
src/Render/Kernel/CPU/: CircleTest.cpp  CircleTest.h  ColorTest.cpp  ColorTest.h  Learn.cpp  Learn.h
src/Util/: Assert.h  Instrumentation.h  Log.cpp  Log.h  Mem.h  Random.cpp  Random.h  Resources.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h
src/Window/: Camera.cpp  Camera.h  Event.h  Image.cpp  Image.h  ImageCamera.cpp  ImageCamera.h  ImageView.cpp  ImageView.h  Input.cpp  Input.h  UI.cpp  UI.h  Window.cpp  Window.h
test/: BBox.cpp  CMakeLists.txt  Math.cpp
